--- a/media-and-career-azuma.html
+++ b/media-and-career-azuma.html
@@ -1384,7 +1384,7 @@ margin-left:55%;
               <li><a class="page-numbers"
                   href="/?post_type=media&amp;paged=20">20</a></li>
               <li><a class="next page-numbers"
-                  href="/news-topics/page/2"><span>»</span></a></li>
+                  href="/media/page/2"><span>»</span></a></li>
             </ul>
 
           </div>
