【修正】代表文言変更

--- a/media-and-career.html
+++ b/media-and-career.html
@@ -1259,7 +1259,7 @@ margin-left:55%;
             </picture>
             </div>
             <div class="mac__cont">
-              <p class="mac__position">株式会社コンヴァノ 代表取締役社長</p>
+              <p class="mac__position">株式会社コンヴァノ 代表取締役</p>
               <p class="mac__name">上四元 絢<span class="mac__name-en">Aya Kamiyotsumoto</span></p>
               <div class="mac__sns">
                 <a href="https://x.com/KeMfm36" target="_blank" rel="noopener noreferrer">
@@ -1293,7 +1293,7 @@ margin-left:55%;
                   <dd class="mac__dd">同執行役員営業部及び人材教育部管掌</dd>
 
                   <dt class="mac__dt">2023年6月</dt>
-                  <dd class="mac__dd">同代表取締役社長（現任）</dd>
+                  <dd class="mac__dd">同代表取締役（現任）</dd>
                 </dl>
               </div>
             </div>
@@ -1354,13 +1354,13 @@ margin-left:55%;
                   <dd class="mac__dd">当社執行役員 経営戦略本部管掌</dd>
 
                   <dt class="mac__dt">2025年5月</dt>
-                  <dd class="mac__dd">（株）Convano consulting　代表取締役社長（現任）</dd>
+                  <dd class="mac__dd">（株）Convano consulting　代表取締役（現任）</dd>
 
                   <dt class="mac__dt">2025年6月</dt>
                   <dd class="mac__dd">当社取締役（現任）</dd>
 
                   <dt class="mac__dt">2025年6月</dt>
-                  <dd class="mac__dd">M&Aテクノマージコンサルティング（株） （現　虎ノ門キャピタル（株））　代表取締役社長（現任）</dd>
+                  <dd class="mac__dd">M&Aテクノマージコンサルティング（株） （現　虎ノ門キャピタル（株））　代表取締役（現任）</dd>
                 </dl>
               </div>
             </div>
