【追加】Linkedinのアイコン追加

--- a/media-and-career.html
+++ b/media-and-career.html
@@ -1334,6 +1334,9 @@ margin-left:55%;
                 <a href="https://www.youtube.com/@MotokiyoA.convano" target="_blank" rel="noopener noreferrer">
                   <img src="./img/media-career/icon_youtube.svg" width="32" height="32" alt="Youtube アイコン" loading="lazy">
                 </a>
+                <a href="https://www.linkedin.com/in/motokiyoa/" target="_blank" rel="noopener noreferrer">
+                  <img src="./img/media-career/icon_linkedin.svg" width="32" height="32" alt="LinkedIn アイコン" loading="lazy">
+                </a>
               </div>
               <p class="mac_text">「事業で稼ぎ、構造で守る」二刀流企業設計者｜BTC保有戦略責任者／新規事業×財務戦略のクロスオーバー実行者。<br>元エンジニア×事業開発×財務×ガバナンスのクロスオーバー領域を専門とし、「円で稼ぎ、円を守る」企業設計を追求しています。</p>
               <div class="mac__table">
